# Time-series-prediction

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
examples/: README.md  run_prediction_simple.py
tests/: test_generator.py  test_trainer.py
tests/test_data/: test_timeseries.py
tests/test_examples/: test_tfts_inputs.py
tests/test_models/: test_informer.py
tfts/: __init__.py  trainer.py
tfts/data/: get_data.py  timeseries.py
tfts/features/: one_order_feature.py  two_order_feature.py
tfts/layers/: attention_layer.py  autoformer_layer.py  moe_layer.py  rwkv_layer.py  unet_layer.py
tfts/models/: base.py  seq2seq.py
