[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | docs/build/
  | node_modules/
  | venve/
  | .venv/
)
'''

[tool.ruff]
line-length = 120
target-version = "py38"
extend-exclude = [
  "docs/build",
  "node_modules",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.nbqa.mutate]
isort = 1
black = 1

[tool.pylint.main]
jobs = 0
py-version = "3.14"
ignore-paths = [
    "^docs/build/.*$",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.typecheck]
generated-members = [
    "tensorflow.*",
    "keras.*",
]

[tool.pylint.messages_control]
disable = [
    "attribute-defined-outside-init",
    "import-error",
    "import-outside-toplevel",
    "line-too-long",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-member",
    "no-name-in-module",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-positional-arguments",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:__array__ implementation doesn't accept a copy keyword.*:DeprecationWarning",
    "ignore:Gradients do not exist for variables .*:UserWarning",
]

[tool.poetry]
name = "tfts"
readme = "README.md"  # Markdown files are supported
version = "0.0.4"  # is being replaced automatically
include = ["tfts/data/air_passengers.csv"]

authors = ["Longxing Tan"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License"]
description = "Deep learning time series with TensorFlow"
repository = "https://github.com/LongxingTan/Time-series-prediction"
documentation = "https://time-series-prediction.readthedocs.io"
homepage = "https://time-series-prediction.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8,<3.15"
pandas = ">=1.3.0"
# better install independently


[tool.poetry.group.dev.dependencies]

# checks and make tools
pre-commit = "^2.20.0"
invoke = "*"
flake8 = "*"
mypy = "*"
pylint = "*"
isort = "*"
coverage = "*"
pytest = "*"
ruff = "*"

# jupyter notebook
ipykernel = "*"
black = { version = "*", allow-prereleases = true, extras = ["jupyter"] }

# documentation
sphinx = "*"
pydata-sphinx-theme = "*"
nbsphinx = "*"
# pandoc = "*"
recommonmark = "*"
ipywidgets = "^8.0.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = false
style = "semver"  # semantic versioning

[build-system]  # make the package pip installable
requires = ["poetry-core>=1.0.7", "poetry-dynamic-versioning>=0.13.1"]
build-backend = "poetry_dynamic_versioning.backend"
